--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Memorytrainer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- Base application theme -->
+    <style name="Base.Theme.Memorytrainer" parent="Theme.MaterialComponents.DayNight">
+        <!-- Light theme colors -->
+        <item name="colorPrimary">@color/accent_light</item>
+        <item name="colorPrimaryVariant">@color/accent_light</item>
+        <item name="colorOnPrimary">@color/primary_text_light</item>
+        <item name="android:statusBarColor">@color/background_light</item>
+        <item name="android:windowBackground">@color/background_light</item>
+        <item name="colorSecondary">@color/secondary_text_light</item>
+        <item name="cardBackgroundColor">@color/card_background_light</item>
+        <!-- Ensure ActionBar is enabled -->
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
+    <!-- Application theme -->
     <style name="Theme.Memorytrainer" parent="Base.Theme.Memorytrainer" />
 </resources>
