--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Dark theme override -->
-    <style name="Theme.Memorytrainer.Dark" parent="Base.Theme.Memorytrainer">
+    <style name="Theme.Memorytrainer" parent="Base.Theme.Memorytrainer">
         <item name="colorPrimary">@color/accent_dark</item>
         <item name="colorPrimaryVariant">@color/accent_dark</item>
         <item name="colorOnPrimary">@color/primary_text_dark</item>
@@ -9,6 +9,8 @@
         <item name="android:windowBackground">@color/background_dark</item>
         <item name="colorSecondary">@color/secondary_text_dark</item>
         <item name="cardBackgroundColor">@color/card_background_dark</item>
+        <item name="android:textColorPrimary">@color/primary_text_dark</item>
+        <item name="android:textColorSecondary">@color/secondary_text_dark</item>
         <!-- Ensure ActionBar is enabled -->
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
