--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -18,7 +18,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <!-- Иконка игры -->
         <ImageView
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="?attr/colorOnPrimary"
+            android:textColor="?attr/colorSecondary"
             app:layout_constraintStart_toEndOf="@id/game_icon"
             app:layout_constraintTop_toTopOf="@id/game_icon"
             app:layout_constraintEnd_toEndOf="parent"
