--- a/app/src/main/res/drawable/button_highlight.xml
+++ b/app/src/main/res/drawable/button_highlight.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp" />
-    <solid android:color="#FF4CAF50" /> <!-- Зеленый цвет -->
+    <solid android:color="#5A8BB1" />
 </shape>
