--- a/app/src/main/res/layout/activity_tap_the_right_rhythm.xml
+++ b/app/src/main/res/layout/activity_tap_the_right_rhythm.xml
@@ -23,16 +23,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:cardBackgroundColor="?attr/cardBackgroundColor"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardElevation="0dp"
+        app:cardBackgroundColor="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rhythmText"
-        android:layout_margin="16dp">
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp">
 
         <FrameLayout
             android:id="@+id/frameLayout"
